--- a/sails_webpack_vue/views/layout.ejs
+++ b/sails_webpack_vue/views/layout.ejs
@@ -89,6 +89,13 @@
 
     <!--SCRIPTS-->
     <script src="/js/dependencies/sails.io.js"></script>
+    <script src="/js/dist/static/js/app.2020922d8a802e00d8ac.js"></script>
+    <script src="/js/dist/static/js/manifest.7de775b9090f4d4ef88a.js"></script>
+    <script src="/js/dist/static/js/vendor.a614f12c718d235c2b26.js"></script>
+    <script src="/js/dist/static/lib/swiper-3.3.1.min.js"></script>
+    <script src="/js/dist/zhihu/static/js/app.e4a7d4222c0712a9936d.js"></script>
+    <script src="/js/dist/zhihu/static/js/manifest.434ea0203d043b80b404.js"></script>
+    <script src="/js/dist/zhihu/static/js/vendor.661b4f0a26629e369f51.js"></script>
     <!--SCRIPTS END-->
   </body>
 </html>
